apps/prometheus/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: prometheus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
      middlewares:
        - name: authelia-forwardauth
  tls:
    secretName: prometheus-tls
